# atmacup-16th-19th-place-solution

./: .gitignore  README.md  nn_inference.sh  nn_sub_dict.py  nn_train.sh  pyproject.toml  solution.py
src/: sampler.py  util.py
