[tool.poetry]
name = "atmacup-16th-19th-place-solution"
version = "0.1.0"
description = ""
authors = ["nasuka <nasuka_s@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
polars = "^0.20.1"
joblib = "^1.3.2"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
